Fix alignment issue at admin panel

--- a/src/Admin/components/manage-products/ProductDetails/productdetail.module.css
+++ b/src/Admin/components/manage-products/ProductDetails/productdetail.module.css
@@ -38,6 +38,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    margin-bottom: 20rem;
 }
 
 .mainContainer {
@@ -64,7 +65,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    margin-bottom: 20rem;   
+    /* margin-bottom: 20rem;    */
 }
 .innerSection {
     width: 100%;
@@ -154,15 +155,16 @@
     overflow-wrap: break-word;
 }
 .medicineContent{
-       color: #5e676f;
+    color: #99a0ac;
     font-size: 14px;
+    font-weight: 500;
     word-wrap: break-word; 
     white-space: normal;     
     overflow-wrap: break-word;
-    width: 100%; 
+    width: 100%;
 }
 .medicineDescriptionContent{
-       color: #5e676f;
+    color: #5e676f;
     font-size: 14px;
     /* font-weight: 500; */
     word-wrap: break-word; 
@@ -228,9 +230,11 @@
 
 /* Style the manufacturer container */
 .manufacturerMainContainer {
+    width: 100%;
     display: flex;
-    flex-direction: column;
-    gap: 10px;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: start;
 }
 
 .manufacturerContainer {
@@ -240,9 +244,14 @@
 }
 
 .manufacturersection {
-    width: 100%;
+    /* width: 100%;
     display: flex;
-    gap: 10px;
+    gap: 10px; */
+    flex: 0 0 calc((100% - 40px) / 3);
+    max-width: calc((100% - 40px) / 3);
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
 
 .manufacturerDescriptionSection {
@@ -295,11 +304,18 @@
     gap: 10px;
 }
 
-.additionalUploadSection {
+/* .additionalUploadSection {
     width: 100%;
     display: flex;
     flex-direction: column;
     gap: 14px;
+} */
+.additionalUploadSection {
+  flex: 0 0 calc((100% - 40px) / 3);
+  max-width: calc((100% - 40px) / 3);
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
 
 .additionalImageSection {
@@ -367,6 +383,7 @@
 .innerComplianceSection {
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
     gap: 20px;
     justify-content: start;
 }
