--- a/src/Supplier/components/Products/ProductDetails/productdetail.module.css
+++ b/src/Supplier/components/Products/ProductDetails/productdetail.module.css
@@ -161,8 +161,7 @@ font-size: 28px;
     overflow-wrap: break-word;
 }
 .medicineContent{
-       color: #5e676f;
-  font-size: 14px;
+    font-size: 14px;
     color: #99a0ac;
     font-weight: 500;
     word-wrap: break-word; 
